--- a/ATT.Alexa.Office365.Repositories/packages.config
+++ b/ATT.Alexa.Office365.Repositories/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Azure.DocumentDB" version="1.11.3" targetFramework="net462" />
   <package id="Microsoft.Graph" version="1.2.0" targetFramework="net462" />
   <package id="Microsoft.Graph.Core" version="1.3.0" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net462" />
 </packages>
