--- a/ATT.Alexa.Office365.Repositories/ATT.Alexa.Office365.Repositories.csproj
+++ b/ATT.Alexa.Office365.Repositories/ATT.Alexa.Office365.Repositories.csproj
@@ -49,6 +49,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
@@ -59,13 +60,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CompanyRepository.cs" />
-    <Compile Include="CalendarRepository.cs" />
+    <Compile Include="MockRepositories\MockCalendarRepository.cs" />
+    <Compile Include="Repositories\CompanyRepository.cs" />
+    <Compile Include="Repositories\CalendarRepository.cs" />
     <Compile Include="Database.cs" />
-    <Compile Include="ICreateRepositoryAsync.cs" />
-    <Compile Include="IReadRepositoryAsync.cs" />
+    <Compile Include="Interfaces\ICreateRepositoryAsync.cs" />
+    <Compile Include="Interfaces\IReadRepositoryAsync.cs" />
+    <Compile Include="MockRepositories\MockUserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserRepository.cs" />
+    <Compile Include="Repositories\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -81,6 +84,7 @@
       <Name>ATT.Alexa.Office365.Models</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Azure.DocumentDB.1.11.3\build\Microsoft.Azure.DocumentDB.targets" Condition="Exists('..\packages\Microsoft.Azure.DocumentDB.1.11.3\build\Microsoft.Azure.DocumentDB.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
